# sweet_tea

./: .gitignore  .kilocodemodes  .kiloignore  .pre-commit-config.yaml  404.html  AGENTIC_USE.md  AGENTS.md  CLAUDE.md  LICENSE  PUBLISHING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  ruff.toml  sitemap.xml
.claude/agents/: architect-agent.md  ask-agent.md  backend-agent.md  code-agent.md  compliance-agent.md  data-agent.md  debug-agent.md  devops-agent.md  document-agent.md  enforcement-agent.md  explain-agent.md  frontend-agent.md  incident-agent.md  migration-agent.md  mlai-agent.md  observability-agent.md  orchestrator-agent.md  performance-agent.md  plan-agent.md  refactor-agent.md  review-agent.md  security-agent.md  test-agent.md
.claude/subagents/: accessibility.md  alerting.md  api-design.md  aws.md  benchmarking.md  boilerplate.md  bottleneck-analysis.md  caching.md  code.md  compliance-auditor.md  dashboards.md  data-model.md  data-preparation.md  decision-log.md  deployment.md  devops.md  docker.md  docs.md  feature.md  gdpr.md  gitops.md  governance.md  house-style.md  kubernetes.md  log-analysis.md  logging.md  maintenance.md  meta.md  metrics.md  microservices.md  ml-ethics-reviewer.md  ml-evaluation-expert.md  mlops-engineer.md  mobile.md  model-training-specialist.md  model-training.md  monitoring.md  oncall.md  optimization-strategies.md  performance.md  (+26 more)
.claude/workflows/: accessibility.md  analytics-setup.md  api-design.md  architecture-documentation.md  boilerplate.md  code.md  compliance-audit.md  data-model.md  data-quality-monitoring.md  debugging-methodology.md  decision-log.md  dependency-scanning.md  dependency-upgrade.md  docs.md  experiment-tracking-setup.md  feature-engineering-guide.md  feature.md  house-style.md  hyperparameter-tuning.md  incident-response-security.md  log-analysis.md  meta.md  migration.md  ml-monitoring-observability.md  mlops-pipeline-setup.md  model-evaluation.md  performance.md  (+33 more)
.prompticorn/: .prompticorn.yaml
.promptosaurus/: .promptosaurus.yaml
api/: index.html
classes_for_testing/: __init__.py  optional_dep.py
docs/: browserconfig.xml  index.md  site.webmanifest
search/: search_index.json
sweet_tea/: abstract_factory.py  abstract_inverter_factory.py  base_factory.py  entry.py  factory.py  inverter_factory.py  registry.py  singleton_factory.py  sweet_tea_error.py  sweet_tea_warning.py  type_parameterized_factory.py
tests/: test_abstract_factory.py  test_abstract_inverter_factory.py  test_entry.py  test_factory.py  test_fill_registry.py  test_inverter_factory.py  test_registry.py  test_registry_exclude.py  test_registry_namespace_packages.py  test_singleton_factory.py  test_singleton_factory_identity.py  test_sweet_tea_error.py  test_sweet_tea_warning.py  test_type_parameterized_factory.py
user-guide/: index.html
(+84 files in other folders)
