[project]
name = "sweet-tea"
version = "0.1.2"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "pytest-cov>=7.0.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
