[project]
name = "sweet_tea"
version = "0.1.2"
description = "A comprehensive Python factory pattern implementation with thread-safe operations and type-safe generics"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "snoodleboot, LLC", email = "info@snoodleboot.io"}
]
maintainers = [
    {name = "snoodleboot, LLC", email = "info@snoodleboot.io"}
]
keywords = ["factory", "patterns", "dependency-injection", "thread-safe", "type-safe"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.12.5",
]

[project.urls]
Homepage = "https://snoodleboot-io.github.io/sweet_tea/"
Documentation = "https://snoodleboot-io.github.io/sweet_tea/"
Repository = "https://github.com/snoodleboot-io/sweet_tea"
Issues = "https://github.com/snoodleboot-io/sweet_tea/issues"
Changelog = "https://github.com/snoodleboot-io/sweet_tea/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
    "pre-commit>=4.0.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
